--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   .header { text-align: center;
   }
 }
-.centered-main-page-element {
+.task-list {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -133,7 +133,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed label {
   text-decoration: line-through
   color: #888;
 }
