--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -139,7 +139,7 @@
 }
 
 .task-list-elem > .inp-elem[type="text"] {
-  width: 226px
+  width: 226px;
 }
 
 .task-list-elem > .delete:hover {
@@ -157,18 +157,18 @@
 
 /* Completed */
 #completed .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-list .task-list-elem .inp-elem[type="text"] {
-  display: none
+  display: none;
 }
 
 .task-list .edit-mode .inp-elem[type="text"] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .task-list .edit-mode .label {
