refactor: add line break for selectors according to rule 3.8 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -48,11 +48,13 @@
   padding: 0px;
 }
 
-.task-list-elem, .heading {
+.task-list-elem,
+.heading {
   list-style: none;
 }
 
-.inp-elem, .btn{
+.inp-elem,
+.btn{
   outline: none;
 }
 
